name:                udev
version:             0.0.0.0
license:             BSD3
license-file:        LICENSE
author:              Sam Truzjan
maintainer:          pxqr.sta@gmail.com
copyright:           (c) 2013, Sam Truzjan
category:            System
stability:           Experimental
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.6.3
homepage:            https://github.com/pxqr/udev
bug-reports:         https://github.com/pxqr/udev/issues
synopsis:            libudev bindings
description:         libudev bindings

extra-source-files:    README.md
                     , changelog

source-repository head
  type:                git
  location:            git://github.com/pxqr/udev.git
  branch:              master

source-repository this
  type:                git
  location:            git://github.com/pxqr/udev.git
  branch:              master
  tag:                 v0.0.0.0

library
  default-language:    Haskell2010
  default-extensions:
  hs-source-dirs:      src
  exposed-modules:     System.UDev.Context
                     , System.UDev.List
                     , System.UDev.Enumerate
                     , System.UDev.Monitor
                     , System.UDev.Device
                     , System.UDev.Types
  -- other-modules:
  pkgconfig-depends:   libudev
  build-depends:       base == 4.*
                     , bytestring
                     , unix
  build-tools:         hsc2hs
  ghc-options:         -Wall

executable example
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             hidraw.hs
  build-depends:       base, bytestring, udev
